cicd/environments/prod/namespace.yaml
# Production Namespace
---
apiVersion: v1
kind: Namespace
metadata:
  name: gravitee-apis-prod
  labels:
    environment: prod
    app.kubernetes.io/name: gravitee-apis
    app.kubernetes.io/part-of: gravitee-apim
    # Pod Security Standards
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
